2004-12-18  John ffitch  <jpff@codemist.co.uk>

	* Engine/fgens.c (hfgens): Ensure gensub array is initialised

2004-12-14  John ffitch  <jpff@codemist.co.uk>

	* SConstruct: All over use strings for options rather than
	numbers.  Seems to work but take care!

2004-12-12  Michael Gogins <gogins@pipeline.com>

	* Updated to FLTK 1.1.6, libsndfile 1.1.11, CVS PortAudio,
	CVS Loris for Windows pre-built binaries.

	* Added Loris API documentation to Csound reference manual.

2004-12-10  John ffitch  <jpff@codemist.co.uk>

	* InOut/libsnd.c: and code

	* OOps/sndinfUG.c (getsndinfo): Removed unused called to readheader

2004-12-03  Michael Gogins <gogins@pipeline.com>

	* Tried to remove most remaining compiler warnings: mostly returning 
	int from main, sscanf for %lf with USE_DOUBLE, type casting, etc.

2004-12-02  John ffitch  <jpff@codemist.co.uk>

	* SConstruct (else): Added PortMIDI build option to aid experimentation.

2004-11-30  John ffitch  <jpff@codemist.co.uk>

	* Top/main.c (signal_handler): Move message to after check for alarm

2004-11-25  Michael Gogins <gogins@pipeline.com>

	* Initial implementation of CounterpointNode -- 
	generates species 1, 2, or 3 counterpoint for cantus firmi
	selected from notes generated by child nodes.
	Based on code from Bill Schottstaedt's species counterpoint generator
	(thanks, Bill!).

	* Optimized the build for boost::ublas matrix code 
	in CsoundVST Node classes.

2004-11-28  John ffitch  <jpff@codemist.co.uk>

	* OOps/pvfileio.c (write_pvocdata, pvoc_readfmt): Use a union
	rather than dubious casts.

2004-11-23  John ffitch  <jpff@codemist.co.uk>

	* OOps/midirecv.c (m_chanmsg): Removed initial values for
	volume/balance/pan/expressions/bend/mastvol 

2004-11-16  John ffitch  <jpff@codemist.co.uk>

	* OOps/ugens2.c (itable, itabli, itabl3): Need to check OK rather
	than assume true=OK

	* Engine/fgens.c: All over removed statics into the environment or
	into arguments.  Make ftfind etc take extra argument.  Should