@@ -1,3 +1,8 @@
+2004-12-19  John ff  <jpff@codemist.co.uk>
+
+	* InOut/pmidi.c (sensMidi): major rehack for PortMIDI structure.
+	Not verified yet.
+
 2004-12-18  John ffitch  <jpff@codemist.co.uk>
 
 	* Engine/fgens.c (hfgens): Ensure gensub array is initialised
